Updates the intro section
- Removes the old background

- Changes the header's color

- Changes the theme primary color

--- a/src/sass/Consts.scss
+++ b/src/sass/Consts.scss
@@ -1,6 +1,7 @@
 $purple-1: #7E7EFF;
 $purple-2: #5758D5;
-$purple-3: #5543D2;
+$purple-3: #7159c1;
+/*$purple-3: #7c4dff;*/
 $purple-4: #6666ff;
 
 $header-height: 100px;
