--- a/src/sass/UserHeader.scss
+++ b/src/sass/UserHeader.scss
@@ -15,6 +15,7 @@
 
   & > .nav {
     display: inline-flex;
+    height: 100%;
 
     .button {
       border: 2px solid white;
@@ -61,27 +62,42 @@
     div {
       position: relative;
 
-      img {
-        border-radius: 100%;
-        padding: 6px 0;
+      &:first-child {
+        align-self: center;
+        
+        .material-icons {
+          font-size: 2.2rem;
+        }
       }
 
-      .button {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        width: 25px;
-        height: 25px;
-        padding: 3px;
-
+      &:not(:first-child) {
         img {
-          height: inherit;
-          filter: saturate(0) brightness(4);
-          transition: transform 0.4s;
+          border-radius: 100%;
+          padding: 6px 0;
         }
 
-        &.active img {
-          transform: rotateZ(90deg);
+        button {
+          position: absolute;
+          right: 0;
+          bottom: 0;
+          width: 25px;
+          height: 25px;
+          border: 1px solid white;
+          background-color: rgba($color: $purple-3, $alpha: 0.75);
+
+          .material-icons {
+            font-size: 16px;
+          }
+
+          img {
+            height: inherit;
+            filter: saturate(0) brightness(4);
+            transition: transform 0.4s;
+          }
+
+          &.active img {
+            transform: rotateZ(90deg);
+          }
         }
       }
     }
