--- a/src/sass/Settings.scss
+++ b/src/sass/Settings.scss
@@ -24,10 +24,7 @@
     width: 250px;
     height: 250px;
     border-radius: 100%;
-    box-shadow: 0px 0px 20px 0px $purple-3 inset,
-                0px 0px 20px 0px $purple-3 inset, 
-                0px 0px 20px 0px $purple-3 inset, 
-                0px 0px 4px 0px $purple-3;
+    background-color: $purple-3;
 
     img {
       height: inherit;
@@ -36,28 +33,19 @@
 
     & > img {
       border-radius: 100%;
-      border: 3px solid $purple-3;
     }
 
-    .button {
+    & > div {
       position: absolute;
       right: 15px;
       bottom: 0;
-      width: 60px;
-      height: 60px;
-      padding: 20px;
+      border-radius: 100%;
       background-color: white;
-
-      img {
-        transition: filter 0.4s;
-      }
-
-      &:hover {
-        background-color: $purple-3;
-
-        img {
-          filter: saturate(0) brightness(4);
-        }
+      
+      button {
+        width: 60px;
+        height: 60px;
+        border: 2px solid $purple-3;
       }
     }
   }
@@ -70,7 +58,7 @@
     display: flex;
     width: 100%;
 
-    .button {
+    button, a {
       flex: 1;
 
       &:last-child {
