--- a/src/sass/PostCard.scss
+++ b/src/sass/PostCard.scss
@@ -1,53 +1,20 @@
 @import './Consts';
 
 .postCard {
-  display: flex;
-  background-color: $purple-3;
-  padding: 15px;
   margin-bottom: 20px;
-  cursor: pointer;
-  transition: background-color 0.4s;
 
-  div:first-child {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 15px;
+  p {
+    line-height: 1.5rem;
+    max-height: 4.5rem;
+    overflow: hidden;
 
-    img {
-      border-radius: 100%;
-      width: 100%;
+    &.title {
+      font-weight: bold;
+      margin: 0;
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+      line-height: 1.8rem;
+      max-height: 3.6rem;
     }
-  }
-
-  div:last-child {
-    flex: 8;
-
-    p {
-      color: white;
-      line-height: 1.5rem;
-      max-height: 4.5rem;
-      overflow: hidden;
-
-      &.title {
-        font-weight: bold;
-        margin: 0;
-        max-height: calc(4.5rem + 13px);
-
-        &::after {
-          content: " ";
-          display: block;
-          height: 3px;
-          width: 100%;
-          margin-top: 10px;
-          background-color: white;
-        }
-      }
-    }
-  }
-
-  &:hover {
-    background-color: $purple-4;
   }
 }
