--- a/src/sass/Discussion.scss
+++ b/src/sass/Discussion.scss
@@ -20,49 +20,19 @@
 
     .postCards {
       flex: 7;
-      
-      span {
-        position: relative;
-        display: block;
-        width: 10px;
-        height: 10px;
-        border-radius: 100%;
-        background-color: $purple-3;
-        margin: 0 auto;
-        animation: load 3s infinite 1s;
-
-        &::before, &::after {
-          content: "";      
-          position: absolute;
-          width: 10px;
-          height: 10px;
-          border-radius: 100%;
-          background-color: $purple-3;
-        }
-
-        &::before {
-          left: -14px;
-          animation: load 3s infinite;
-        }
-
-        &::after {
-          right: -14px;
-          animation: load 3s infinite 2s;
-        }
-      }
     }
 
     .optionsColumn {
       flex: 3;
 
-      .button {
+      button {
         width: 100%;
       }
 
       div {
         width: 100%;
         height: 200px;
-        border: 3px solid $purple-3;
+        border: 1px solid $purple-3;
         margin: 20px 0;
         cursor: pointer;
       }
