--- a/src/sass/Post.scss
+++ b/src/sass/Post.scss
@@ -24,14 +24,14 @@
     .optionsColumn {
       flex: 3;
 
-      .button {
+      a {
         width: 100%;
       }
 
       div {
         width: 100%;
         height: 200px;
-        border: 3px solid $purple-3;
+        border: 1px solid $purple-3;
         margin: 20px 0;
         cursor: pointer;
       }
