Updates the CouseCard and AboutCourse styles

--- a/src/sass/CourseCard.scss
+++ b/src/sass/CourseCard.scss
@@ -1,8 +1,8 @@
 @import './Consts';
 
-.courseCard {
+div.courseCard {
   color: white;
-  background-color: $purple-2;
+  background-color: $purple-3;
   padding: 15px;
   flex-shrink: 1;
 
