--- a/src/sass/UserHeader.scss
+++ b/src/sass/UserHeader.scss
@@ -24,7 +24,7 @@
     .name {
       color: white;
       font-size: 2rem;
-      margin: 0 10px 0 20px;
+      margin: 0 10px 0 30px;
       align-self: center;
     }
 
@@ -47,6 +47,7 @@
 
         button {
           position: absolute;
+          padding: 0;
           right: -5px;
           bottom: 0;
           width: 25px;
