Adds the Drawer in UserHeader

--- a/src/sass/UserHeader.scss
+++ b/src/sass/UserHeader.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
 
   & > a {
-    height: 100%;
+    font-size: 2rem;
   }
 
   img {
@@ -62,51 +62,15 @@
       }
     }
   }
-
-  .slideMenu {
-    display: none;
-
-    .menu-button {
-      position: absolute;
-      top: calc(50% - #{$header-height-sm - 40px} / 2);
-      left: 20px;
-      align-self: center;
-      height: $header-height-sm - 40px;
-      width: $header-height-sm - 34px;
-
-      span {
-        background-color: white;
-        transition: background-color 0.4s;
-      }
-
-      &:hover {
-        span {
-          background-color: #c0c0c0;
-        }
-      }
-    }
-  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .userHeader {
     height: $header-height-sm;
     padding: 10px 5%;
   
-    a {
-      margin: 0 auto;
-
-      img {
-        height: $header-height-sm - 20px;
-      }
-    }
-  
     & > .nav {
       display: none;
-    }
-
-    .slideMenu {
-      display: block;
     }
   }
 }
