--- a/src/sass/Settings.scss
+++ b/src/sass/Settings.scss
@@ -43,8 +43,10 @@
       background-color: white;
       
       button {
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
+        min-width: 0;
+        padding: 0;
         border: 2px solid $purple-3;
       }
     }
