--- a/src/sass/UserSocialMedias.scss
+++ b/src/sass/UserSocialMedias.scss
@@ -10,9 +10,10 @@
 
   button {
     width: 60px;
-    height: 64px;
+    height: 60px;
     border-radius: 100%;
-    padding: 10px;
+    padding: 0;
+    min-width: 0;
     margin: 0 6px 10px 6px;
 
     img {
