--- a/src/sass/FormPages.scss
+++ b/src/sass/FormPages.scss
@@ -14,8 +14,10 @@
       margin: 0 calc(100% / 6 + 40px) 0 10px;
     }
 
-    div:not(.userSocialMedias) form > a {
-      width: 100%;
+    div:not(.userSocialMedias) form {
+      & > a, & > button {
+        width: 100%;
+      }
     }
   }
 
