--- a/src/sass/UserHeader.scss
+++ b/src/sass/UserHeader.scss
@@ -50,7 +50,7 @@
           position: absolute;
           padding: 0;
           right: -5px;
-          bottom: 0;
+          bottom: -5px;
           width: 25px;
           height: 25px;
           border: 1px solid white;
