--- a/src/sass/Message.scss
+++ b/src/sass/Message.scss
@@ -7,42 +7,15 @@
     flex: 2;
     margin-right: 10px;
 
-    .avatar {
-      position: relative;
-      width: 100%;
-      height: auto;
-  
-      img {
-        width: 100%;
-        height: inherit;
-        padding: inherit;
-        border-radius: 100%;
-      }
-  
-      span {
-        display: flex;
-        position: absolute;
-        right: 10px;
-        bottom: 8px;
-        width: 40px;
-        height: 40px;
-        border-radius: 100%;
-        background-color: rgba($color: white, $alpha: 0.9);
-        color: $purple-3;
-        border: 1px solid $purple-3;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
-      }
-
-      &::after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 3px;
-        margin-top: 8px;
-        background-color: #252525;
-      }
+    .badge > span {
+      position: absolute;
+      left: 72px;
+      top: 72px;
+      width: 30px;
+      height: 30px;
+      background-color: rgba($color: white, $alpha: 0.9);
+      border: 1px solid $purple-3;
+      font-weight: bold;
     }
 
     p {
