Adds a circular progess to settings save button

--- a/src/sass/Settings.scss
+++ b/src/sass/Settings.scss
@@ -51,8 +51,12 @@
     display: flex;
     width: 100%;
 
-    button, a {
+    & > div {
       flex: 1;
+
+      a, button {
+        width: 100%;
+      }
 
       &:last-child {
         margin-left: 20px;
