--- a/src/sass/Discussion.scss
+++ b/src/sass/Discussion.scss
@@ -29,7 +29,7 @@
         width: 100%;
       }
 
-      div {
+      div:not(:first-child) {
         width: 100%;
         height: 200px;
         border: 1px solid $purple-3;
