--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -17,13 +17,14 @@ $login-shrink: 20;
   nav {
     flex: 1;
     align-self: center;
+    display: inline-flex;
 
-    & > a {
+    & > div > a {
       margin: 0 10px;
     }
 
     &:last-child {
-      text-align: right;
+      justify-content: flex-end;
     }
   }
 
