--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -9,6 +9,10 @@
     text-align: center;
   }
 
+  section > div:not(.row) {
+    text-align: center;
+  }
+
   section > span {
     color: #4c4c4c;
     font-size: 0.9rem;
